tests/baselines/reference/dynamicImportDeferInvalidStandalone.errors.txt
b.ts(1,1): error TS18061: 'import.defer' must be followed by '('
b.ts(3,2): error TS18061: 'import.defer' must be followed by '('


==== b.ts (2 errors) ====
    import.defer;
    ~~~~~~~~~~~~
!!! error TS18061: 'import.defer' must be followed by '('
    
    (import.defer)("a");
     ~~~~~~~~~~~~
!!! error TS18061: 'import.defer' must be followed by '('
    